estructura de carpetas con mayor orden, encabezado sin terminar, notificaciones

--- a/notificaciones/index.html
+++ b/notificaciones/index.html
@@ -9,7 +9,7 @@
     <main>
         <h1>Panel de notificaciones</h1>
         <section id="notificacion_en_proceso">
-            <button onclick="location.replace('./nueva_notificacion.html')">+ Nueva notificación</button>
+            <button onclick="location.replace('./nueva.html')">+ Nueva notificación</button>
             <table>
                 <thead>
                     <th>Nombre</th>
@@ -21,7 +21,7 @@
                     <td>Prevení el Dengue</td>
                     <td>Dengue</td>
                     <td>AAAA/MM/DD</td>
-                    <td><button onclick="location.replace('./editar_notificacion.html')">Editar</button></td>
+                    <td><button onclick="location.replace('./editar.html')">Editar</button></td>
                 </tr>
                 <tr>
                     <td>Notificación 6</td>
@@ -55,7 +55,7 @@
                     <td>Notificación 1</td>
                     <td>Campaña A</td>
                     <td>AAAA/MM/DD</td>
-                    <td><button>Ver</button></td>
+                    <td><button onclick="location.replace('./ver.html')">Ver</button></td>
                 </tr>
                 <tr>
                     <td>Notificación 2</td>
