--- a/notificaciones/nueva.html
+++ b/notificaciones/nueva.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./estilos.css">
+    <!--Este archivo de estilo debería ser eliminado con el encabezado(header)-->
+    <!--Este archivo de estilo solo estiliza el encabezado(header)-->
+    <link rel="stylesheet" href="../layout/estilo.css">
     <title>Document</title>
 </head>
 <body>
+    <!--El header debería ser inyectado ya que es un componente reutilizable pero 
+    en esta instancia se agrega la etiqueta directamente en el archivo-->
+    <header>
+        
+        <nav>
+            <ul class="main-menu">
+                <li>
+                    <button class="menu-btn">Notificaciones</button>
+                    <ul class="submenu">
+                        <li onclick="location.replace('../notificaciones/index.html')">Panel de notificaciones</li>
+                        <li onclick="location.replace('../campañas/index.html')">Campañas</li>
+                        <li>Plantillas</li>
+                    </ul>
+                </li>
+                <li>
+                    <button class="menu-btn">Estadísticas</button>
+                </li>
+                <li>
+                    <button class="menu-btn">Configuración</button>
+                    <ul class="submenu">
+                        <li>Usuarios</li>
+                        <li>Rol</li>
+                    </ul>
+                </li>
+                <li>
+                    <button class="menu-btn">Raúl Perez</button>
+                    <ul class="submenu">
+                        <li>Salir</li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+
+    </header>
     <main>
         <form>
             <fieldset>
@@ -49,7 +86,7 @@
 
                 <div class="checkbox">
                             <button type="button">Guardar</button>
-                            <button type="button">Cancelar</button>
+                            <button type="button" onclick="location.replace('./index.html')">Cancelar</button>
                 </div>
 
                 <table>
@@ -71,10 +108,12 @@
                 </table>
                 <button type="submit">Cargar plantilla</button>
                 <button type="button">Crear</button>
-                <button type="button" onclick="location.replace('./notificaciones.html')">Cancelar</button>
+                <button type="button" onclick="location.replace('./index.html')">Cancelar</button>
 
             </fieldset>
         </form>
     </main>
+    <!--Este script solo funciona sobre el encabezado.-->
+    <script src="../layout/script.js"></script>
 </body>
 </html>
