--- a/campañas/index.html
+++ b/campañas/index.html
@@ -1,116 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Este archivo de estilo debería ser eliminado con el encabezado(header)-->
-    <!--Este archivo de estilo solo estiliza el encabezado(header)-->
-    <link rel="stylesheet" href="../layout/estilo.css">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../poncho.min.css">
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../poncho.min.css" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-    <!--El header debería ser inyectado ya que es un componente reutilizable pero 
-    en esta instancia se agrega la etiqueta directamente en el archivo-->
+  <body>
+    <!--El header debería ser un componente reutilizable-->
     <header>
-        <nav class="navbar navbar-default">
-            <div class="container-fluid container">
-                <div class="row">
-                    <div id="alignment-example" class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav main-menu">
-                            <li class="">
-                                <!--<button class="menu-btn">Notificaciones</button>
+      <nav class="navbar navbar-default">
+        <div class="container-fluid container">
+          <div class="row">
+            <div id="alignment-example" class="collapse navbar-collapse">
+              <ul class="nav navbar-nav main-menu">
+                <li class="">
+                  <!--<button class="menu-btn">Notificaciones</button>
                          <ul class="submenu">
                             <li onclick="location.replace('../notificaciones/index.html')">Panel de notificaciones</li>
                             <li onclick="location.replace('../campañas/index.html')">Campañas</li>
                             <li>Plantillas</li>
                         </ul> -->
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Notificaciones<span class="caret"></span></a>
-                                <ul class="dropdown-menu" aria-labelledby="Notificaciones">
-                                    <li><a href="../notificaciones/index.html">Panel de notificaciones</a></li>
-                                    <li><a href="../campañas/index.html">Campañas</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <!-- <button class="menu-btn">Estadísticas</button> -->
-                                <a href="">Estadísticas</a>
-                            </li>
-                            <li class="">
-                                <!-- <button class="menu-btn">Configuración</button> -->
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Configuración<span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="">Usuarios</a></li>
-                                    <li><a href="">Rol</a></li>
-                                </ul>
-                            </li>
-                            <li class="">
-                                <!-- <button class="menu-btn">Raúl Perez</button> -->
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Raúl Perez<span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="">Salir</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+                  <a
+                    href="#"
+                    class="dropdown-toggle"
+                    data-toggle="dropdown"
+                    role="button"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                    >Notificaciones<span class="caret"></span
+                  ></a>
+                  <ul class="dropdown-menu" aria-labelledby="Notificaciones">
+                    <li>
+                      <a href="../notificaciones/index.html"
+                        >Panel de notificaciones</a
+                      >
+                    </li>
+                    <li><a href="../campañas/index.html">Campañas</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <!-- <button class="menu-btn">Estadísticas</button> -->
+                  <a href="">Estadísticas</a>
+                </li>
+                <li class="">
+                  <!-- <button class="menu-btn">Configuración</button> -->
+                  <a
+                    href="#"
+                    class="dropdown-toggle"
+                    data-toggle="dropdown"
+                    role="button"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                    >Configuración<span class="caret"></span
+                  ></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="">Usuarios</a></li>
+                    <li><a href="">Rol</a></li>
+                  </ul>
+                </li>
+                <li class="">
+                  <!-- <button class="menu-btn">Raúl Perez</button> -->
+                  <a
+                    href="#"
+                    class="dropdown-toggle"
+                    data-toggle="dropdown"
+                    role="button"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                    >Raúl Perez<span class="caret"></span
+                  ></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="">Salir</a></li>
+                  </ul>
+                </li>
+              </ul>
             </div>
-        </nav>
+          </div>
+        </div>
+      </nav>
     </header>
     <main>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h1>Campañas</h1>
-                    <section id="notificacion_en_proceso">
-                        <table class="table table-responsive-poncho">
-                            <thead>
-                                <th>Nombre</th>
-                            </thead>
-                            <tr>
-                                <td>Campaña A</td>
-                                <td><button onclick="location.replace('./editar.html')">Editar</button></td>
-                            </tr>
-                            <tr>
-                                <td>Notificación B</td>
-                                <td><button>Editar</button></td>
-                            </tr>
-                            <tr>
-                                <td>Notificación C</td>
-                                <td><button>Editar</button></td>
-                            </tr>
-                            <tr>
-                                <td>Notificación D</td>
-                                <td><button>Editar</button></td>
-                            </tr>
-                        </table>
-                        <button type="button" class="btn btn-success" onclick="location.replace('./nueva.html')">+ Nueva campaña</button>
-                        <button type="button" class="btn bg-danger text-white" onclick="location.replace('../notificaciones/index.html')">Cancelar</button>
-                    </section>
-                </div>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h1>Campañas</h1>
+            <section id="notificacion_en_proceso">
+              <table class="table table-responsive-poncho">
+                <thead>
+                  <th>Nombre</th>
+                </thead>
+                <tr>
+                  <td>Campaña A</td>
+                  <td>
+                    <button onclick="location.replace('./editar.html')">
+                      Editar
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Notificación B</td>
+                  <td><button>Editar</button></td>
+                </tr>
+                <tr>
+                  <td>Notificación C</td>
+                  <td><button>Editar</button></td>
+                </tr>
+                <tr>
+                  <td>Notificación D</td>
+                  <td><button>Editar</button></td>
+                </tr>
+              </table>
+              <button
+                type="button"
+                class="btn btn-success"
+                onclick="location.replace('./nueva.html')"
+              >
+                + Nueva campaña
+              </button>
+              <button
+                type="button"
+                class="btn bg-danger text-white"
+                onclick="location.replace('../notificaciones/index.html')"
+              >
+                Cancelar
+              </button>
+            </section>
+          </div>
         </div>
+      </div>
     </main>
-    <!--Este script solo funciona sobre el encabezado.
-    <script src="../layout/script.js"></script>-->
-</body>
-<!-- jQuery library -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- Bootstrap JS -->
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<!-- Initialize Bootstrap functionality -->
-<script>
-// Initialize tooltip component
-$(function() {
-    $('[data-toggle="tooltip"]').tooltip()
-})
+    <!-- jQuery library -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!-- Initialize Bootstrap functionality -->
+    <script>
+      // Initialize tooltip component
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+      });
 
-// Initialize popover component
-$(function() {
-    $('[data-toggle="popover"]').popover()
-})
-</script>
-
+      // Initialize popover component
+      $(function () {
+        $('[data-toggle="popover"]').popover();
+      });
+    </script>
+  </body>
 </html>
