--- a/notificaciones/index.html
+++ b/notificaciones/index.html
@@ -1,115 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Este archivo de estilo debería ser eliminado con el encabezado(header)-->
-    <!--Este archivo de estilo solo estiliza el encabezado(header)-->
-    <link rel="stylesheet" href="../layout/estilo.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../poncho.min.css" />
     <title>Document</title>
-</head>
-<body>
-    <!--El header debería ser inyectado ya que es un componente reutilizable pero 
-    en esta instancia se agrega la etiqueta directamente en el archivo-->
+  </head>
+  <body>
+    <!--El header debería ser un componente reutilizable-->
     <header>
-        
-        <nav>
-            <ul class="main-menu">
-                <li>
-                    <button class="menu-btn">Notificaciones</button>
-                    <ul class="submenu">
-                        <li onclick="location.replace('../notificaciones/index.html')">Panel de notificaciones</li>
-                        <li onclick="location.replace('../campañas/index.html')">Campañas</li>
-                        <li>Plantillas</li>
-                    </ul>
+      <nav class="navbar navbar-default">
+        <div class="container-fluid container">
+          <div class="row">
+            <div id="alignment-example" class="collapse navbar-collapse">
+              <ul class="nav navbar-nav main-menu">
+                <li class="">
+                  <a
+                    href="#"
+                    class="dropdown-toggle"
+                    data-toggle="dropdown"
+                    role="button"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                    >Notificaciones<span class="caret"></span
+                  ></a>
+                  <ul class="dropdown-menu" aria-labelledby="Notificaciones">
+                    <li>
+                      <a href="../notificaciones/index.html"
+                        >Panel de notificaciones</a
+                      >
+                    </li>
+                    <li><a href="../campañas/index.html">Campañas</a></li>
+                  </ul>
                 </li>
                 <li>
-                    <button class="menu-btn">Estadísticas</button>
+                  <!-- <button class="menu-btn">Estadísticas</button> -->
+                  <a href="">Estadísticas</a>
                 </li>
-                <li>
-                    <button class="menu-btn">Configuración</button>
-                    <ul class="submenu">
-                        <li>Usuarios</li>
-                        <li>Rol</li>
-                    </ul>
+                <li class="">
+                  <!-- <button class="menu-btn">Configuración</button> -->
+                  <a
+                    href="#"
+                    class="dropdown-toggle"
+                    data-toggle="dropdown"
+                    role="button"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                    >Configuración<span class="caret"></span
+                  ></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="">Usuarios</a></li>
+                    <li><a href="">Rol</a></li>
+                  </ul>
                 </li>
-                <li>
-                    <button class="menu-btn">Raúl Perez</button>
-                    <ul class="submenu">
-                        <li>Salir</li>
-                    </ul>
+                <li class="">
+                  <!-- <button class="menu-btn">Raúl Perez</button> -->
+                  <a
+                    href="#"
+                    class="dropdown-toggle"
+                    data-toggle="dropdown"
+                    role="button"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                    >Raúl Perez<span class="caret"></span
+                  ></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="">Salir</a></li>
+                  </ul>
                 </li>
-            </ul>
-        </nav>
-
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
     </header>
     <main>
+      <div class="container">
         <h1>Panel de notificaciones</h1>
         <section id="notificacion_en_proceso">
-            <button onclick="location.replace('./nueva.html')">+ Nueva notificación</button>
-            <table>
-                <thead>
-                    <th>Nombre</th>
-                    <th>Campaña</th>
-                    <th>Fecha</th>
-                    <th>Acciones</th>
-                </thead>
-                <tr>
-                    <td>Prevení el Dengue</td>
-                    <td>Dengue</td>
-                    <td>AAAA/MM/DD</td>
-                    <td><button onclick="location.replace('./editar.html')">Editar</button></td>
-                </tr>
-                <tr>
-                    <td>Notificación 6</td>
-                    <td>-</td>
-                    <td>AAAA/MM/DD</td>
-                    <td><button>Editar</button></td>
-                </tr>
-                <tr>
-                    <td>Notificación 7</td>
-                    <td>Campaña C</td>
-                    <td>AAAA/MM/DD</td>
-                    <td><button>Editar</button></td>
-                </tr>
-                <tr>
-                    <td>Notificación 8</td>
-                    <td>Campaña B</td>
-                    <td>AAAA/MM/DD</td>
-                    <td><button>Editar</button></td>
-                </tr>
-            </table>
+          <button onclick="location.replace('./nueva.html')">
+            + Nueva notificación
+          </button>
+          <table>
+            <thead>
+              <th>Nombre</th>
+              <th>Campaña</th>
+              <th>Fecha</th>
+              <th>Acciones</th>
+            </thead>
+            <tr>
+              <td>Prevení el Dengue</td>
+              <td>Dengue</td>
+              <td>AAAA/MM/DD</td>
+              <td>
+                <button onclick="location.replace('./editar.html')">
+                  Editar
+                </button>
+              </td>
+            </tr>
+            <tr>
+              <td>Notificación 6</td>
+              <td>-</td>
+              <td>AAAA/MM/DD</td>
+              <td><button>Editar</button></td>
+            </tr>
+            <tr>
+              <td>Notificación 7</td>
+              <td>Campaña C</td>
+              <td>AAAA/MM/DD</td>
+              <td><button>Editar</button></td>
+            </tr>
+            <tr>
+              <td>Notificación 8</td>
+              <td>Campaña B</td>
+              <td>AAAA/MM/DD</td>
+              <td><button>Editar</button></td>
+            </tr>
+          </table>
         </section>
         <section id="notificaciones_realizadas">
-            <table>
-                <thead>
-                    <th>Nombre</th>
-                    <th>Campaña</th>
-                    <th>Fecha</th>
-                    <th>Acciones</th>
-                </thead>
-                <tr>
-                    <td>Notificación 1</td>
-                    <td>Campaña A</td>
-                    <td>AAAA/MM/DD</td>
-                    <td><button onclick="location.replace('./ver.html')">Ver</button></td>
-                </tr>
-                <tr>
-                    <td>Notificación 2</td>
-                    <td>Campaña B</td>
-                    <td>AAAA/MM/DD</td>
-                    <td><button>Ver</button></td>
-                </tr>
-                <tr>
-                    <td>Notificación 3</td>
-                    <td>Campaña C</td>
-                    <td>AAAA/MM/DD</td>
-                    <td><button>Ver</button></td>
-                </tr>
-            </table>
+          <table>
+            <thead>
+              <th>Nombre</th>
+              <th>Campaña</th>
+              <th>Fecha</th>
+              <th>Acciones</th>
+            </thead>
+            <tr>
+              <td>Notificación 1</td>
+              <td>Campaña A</td>
+              <td>AAAA/MM/DD</td>
+              <td>
+                <button onclick="location.replace('./ver.html')">Ver</button>
+              </td>
+            </tr>
+            <tr>
+              <td>Notificación 2</td>
+              <td>Campaña B</td>
+              <td>AAAA/MM/DD</td>
+              <td><button>Ver</button></td>
+            </tr>
+            <tr>
+              <td>Notificación 3</td>
+              <td>Campaña C</td>
+              <td>AAAA/MM/DD</td>
+              <td><button>Ver</button></td>
+            </tr>
+          </table>
         </section>
+      </div>
     </main>
-    <!--Este script solo funciona sobre el encabezado.-->
-    <script src="../layout/script.js"></script>
-</body>
+    <!-- jQuery library -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!-- Initialize Bootstrap functionality -->
+    <script>
+      // Initialize tooltip component
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+      });
+
+      // Initialize popover component
+      $(function () {
+        $('[data-toggle="popover"]').popover();
+      });
+    </script>
+  </body>
 </html>
