--- a/notificaciones/medio.html
+++ b/notificaciones/medio.html
@@ -1,51 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Este archivo de estilo debería ser eliminado con el encabezado(header)-->
     <!--Este archivo de estilo solo estiliza el encabezado(header)-->
     <link rel="stylesheet" href="../layout/estilo.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../poncho.min.css">
     <title>Document</title>
 </head>
+
 <body>
     <!--El header debería ser inyectado ya que es un componente reutilizable pero 
     en esta instancia se agrega la etiqueta directamente en el archivo-->
     <header>
-        
-        <nav>
-            <ul class="main-menu">
-                <li>
-                    <button class="menu-btn">Notificaciones</button>
-                    <ul class="submenu">
-                        <li onclick="location.replace('../notificaciones/index.html')">Panel de notificaciones</li>
-                        <li onclick="location.replace('../campañas/index.html')">Campañas</li>
-                        <li>Plantillas</li>
-                    </ul>
-                </li>
-                <li>
-                    <button class="menu-btn">Estadísticas</button>
-                </li>
-                <li>
-                    <button class="menu-btn">Configuración</button>
-                    <ul class="submenu">
-                        <li>Usuarios</li>
-                        <li>Rol</li>
-                    </ul>
-                </li>
-                <li>
-                    <button class="menu-btn">Raúl Perez</button>
-                    <ul class="submenu">
-                        <li>Salir</li>
-                    </ul>
-                </li>
-            </ul>
+
+        <nav class="navbar navbar-default">
+            <div class="container-fluid container">
+                <div class="row">
+                    <div id="alignment-example" class="collapse navbar-collapse">
+                        <ul class="nav navbar-nav main-menu">
+                            <li class="">
+                                <!--<button class="menu-btn">Notificaciones</button>
+                         <ul class="submenu">
+                            <li onclick="location.replace('../notificaciones/index.html')">Panel de notificaciones</li>
+                            <li onclick="location.replace('../campañas/index.html')">Campañas</li>
+                            <li>Plantillas</li>
+                        </ul> -->
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                    aria-haspopup="true" aria-expanded="false">Notificaciones<span
+                                        class="caret"></span></a>
+                                <ul class="dropdown-menu" aria-labelledby="Notificaciones">
+                                    <li><a href="../notificaciones/index.html">Panel de notificaciones</a></li>
+                                    <li><a href="../campañas/index.html">Campañas</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <!-- <button class="menu-btn">Estadísticas</button> -->
+                                <a href="">Estadísticas</a>
+                            </li>
+                            <li class="">
+                                <!-- <button class="menu-btn">Configuración</button> -->
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                    aria-haspopup="true" aria-expanded="false">Configuración<span
+                                        class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="">Usuarios</a></li>
+                                    <li><a href="">Rol</a></li>
+                                </ul>
+                            </li>
+                            <li class="">
+                                <!-- <button class="menu-btn">Raúl Perez</button> -->
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                    aria-haspopup="true" aria-expanded="false">Raúl Perez<span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="">Salir</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </nav>
 
     </header>
     <main>
         <h1>Vista de medio</h1>
-        
+
         <div class="checkbox">
             <input type="checkbox" id="sms" name="sms" value="sms">
             <label for="destacada">SMS</label><br>
@@ -58,7 +81,23 @@
         </div>
 
     </main>
-    <!--Este script solo funciona sobre el encabezado.-->
-    <script src="../layout/script.js"></script>
+    <!--Este script solo funciona sobre el encabezado.
+    <script src="../layout/script.js"></script>-->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!-- Initialize Bootstrap functionality -->
+    <script>
+        // Initialize tooltip component
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+
+        // Initialize popover component
+        $(function () {
+            $('[data-toggle="popover"]').popover()
+        })
+    </script>
 </body>
+
 </html>
