--- a/notificaciones/editar.html
+++ b/notificaciones/editar.html
@@ -80,7 +80,7 @@
                             <input type="checkbox" id="novedades" name="novedades" value='Seccion "novedades"'>
                             <label for="novedades"> Sección "novedades" </label><br>
                         </div>
-                        <table>
+                        <table class="table table-responsive-poncho table-striped">
                             <thead>
                                 <thead>Edición de notificación</th>
                                 </thead>
