--- a/notificaciones/ver.html
+++ b/notificaciones/ver.html
@@ -101,7 +101,7 @@
                             <button type="button">Cancelar</button>
                         </div>
 
-                        <table>
+                        <table class="table table-responsive-poncho table-striped">
                             <thead>
                                 <thead>Configuración de notificación</th>
                                 </thead>
