--- a/campañas/index.html
+++ b/campañas/index.html
@@ -53,7 +53,7 @@
                 <div class="col-md-12">
                     <h1>Campañas</h1>
                     <section id="notificacion_en_proceso">
-                        <table class="table table-responsive-poncho">
+                        <table class="table table-responsive-poncho table-striped">
                             <thead>
                                 <th>Nombre</th>
                             </thead>
