--- a/notificaciones/index.html
+++ b/notificaciones/index.html
@@ -18,11 +18,12 @@
                 <div class="row">
                     <div id="alignment-example" class="collapse navbar-collapse">
                         <ul class="nav navbar-nav main-menu">
-                            <li class=""
+                            <li class="">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Notificaciones<span class="caret"></span></a>
                                 <ul class="dropdown-menu" aria-labelledby="Notificaciones">
                                     <li><a href="../notificaciones/index.html">Panel de notificaciones</a></li>
                                     <li><a href="../campañas/index.html">Campañas</a></li>
+                                    <li><a href="../campañas/index.html">Estadísticas</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -49,12 +50,12 @@
     </header>
     <main>
         <div class="container">
-            <div class="raw">
+            <div class="row">
             </div>
             <h1>Panel de notificaciones</h1>
             <section id="notificacion_en_proceso">
                 <button onclick="location.replace('./nueva.html')">+ Nueva notificación</button>
-                <table class="table table-responsive-poncho">
+                <table class="table table-responsive-poncho table-striped">
                     <thead>
                         <th>Nombre</th>
                         <th>Campaña</th>
@@ -88,7 +89,7 @@
                 </table>
             </section>
             <section id="notificaciones_realizadas">
-                <table class="table table-responsive-poncho">
+                <table class="table table-responsive-poncho table-striped">
                     <thead>
                         <th>Nombre</th>
                         <th>Campaña</th>
