--- a/notificaciones/nueva.html
+++ b/notificaciones/nueva.html
@@ -100,7 +100,7 @@
                             <button type="button" onclick="location.replace('./index.html')">Cancelar</button>
                         </div>
 
-                        <table>
+                        <table class="table table-responsive-poncho table-striped">
                             <thead>
                                 <thead>Edición de notificación</th>
                                 </thead>
