aplicación de estilos de poncho y bootstrap / notificaciones

--- a/campañas/editar.html
+++ b/campañas/editar.html
@@ -18,10 +18,11 @@
                     <div id="alignment-example" class="collapse navbar-collapse">
                         <ul class="nav navbar-nav main-menu">
                             <li class="">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Notificaciones<span class="caret"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="Notificaciones">Notificaciones<span class="caret"></span></a>
                                 <ul class="dropdown-menu" aria-labelledby="Notificaciones">
                                     <li><a href="../notificaciones/index.html">Panel de notificaciones</a></li>
                                     <li><a href="../campañas/index.html">Campañas</a></li>
+                                    <li><a href="../plantillas/index.html">Plantillas</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -49,14 +50,14 @@
     </header>
     <main>
         <div class="container">
-            <div class="raw">
+            <div class="row">
                 <form>
                     <fieldset>
                         <legend>
                             <h2>Edición de campaña</h2>
                         </legend>
         
-                        <label for="campania">Nombre de la campaña</label>
+                        <label>Nombre de la campaña</label>
                         <input type="text" placeholder="Campaña A">              
         
                         <button type="button">Crear</button>
