--- a/notificaciones/medio.html
+++ b/notificaciones/medio.html
@@ -21,7 +21,7 @@
                         <ul class="nav navbar-nav main-menu">
                             <li class="">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                    aria-haspopup="true" aria-expanded="false">Notificaciones<span
+                                    aria-haspopup="true" aria-expanded="false" id="Notificaciones">Notificaciones<span
                                         class="caret"></span></a>
                                 <ul class="dropdown-menu" aria-labelledby="Notificaciones">
                                     <li><a href="../notificaciones/index.html">Panel de notificaciones</a></li>
@@ -58,14 +58,14 @@
         <h1>Vista de medio</h1>
 
         <div class="checkbox">
-            <input type="checkbox" id="sms" name="sms" value="sms">
-            <label for="destacada">SMS</label><br>
+            <input type="checkbox" value="sms">
+            <label>SMS</label><br>
 
-            <input type="checkbox" id="push" name="push" value='push"'>
-            <label for="novedades"> PUSH </label><br>
+            <input type="checkbox" value='push"'>
+            <label> PUSH </label><br>
 
             <input type="checkbox" id="correo" name="correo" value='correo"'>
-            <label for="novedades"> CORREO </label><br>
+            <label> CORREO </label><br>
         </div>
 
     </main>
